syntax = "proto3";
package com.dxc.ptinsight.ingress;

import "ptinsight/common/proto/base.proto";
import "google/protobuf/timestamp.proto";


option java_package = "com.dxc.ptinsight.proto.ingress";


message VehicleInfo {
  com.dxc.ptinsight.VehicleType type = 1;
  int32 operator = 2;
  int32 number = 3;
}

message RouteInfo {
  string id = 1;
  bool direction = 2;
  string operating_day = 3;
  string departure_time = 4;
}

message VehiclePosition {
  VehicleInfo vehicle = 1;
  RouteInfo route = 2;
  float latitude = 3;
  float longitude = 4;
  int32 heading = 5;
  float speed = 6;
  float acceleration = 7;
}

message Arrival {
  VehicleInfo vehicle = 1;
  float latitude = 2;
  float longitude = 3;
  int32 stop = 4;
  google.protobuf.Timestamp scheduled_arrival = 5;
  google.protobuf.Timestamp scheduled_departure = 6;
}

message Departure {
  VehicleInfo vehicle = 1;
  float latitude = 2;
  float longitude = 3;
  int32 stop = 4;
  google.protobuf.Timestamp scheduled_arrival = 5;
  google.protobuf.Timestamp scheduled_departure = 6;
}
